--- a/NuitInfo.Rubeus.csproj
+++ b/NuitInfo.Rubeus.csproj
@@ -5,6 +5,44 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-NuitInfo.Rubeus-ac32bdfb-5f45-450b-8b44-c4a234d5a2d8</UserSecretsId>
+    <!-- 🔽 On coupe la génération d'AssemblyInfo.cs -->
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="Data\app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
+  </ItemGroup>
+
+<ItemGroup>
+  <Compile Remove="Tests/**" />
+  <EmbeddedResource Remove="Tests/**" />
+  <None Remove="Tests/**" />
+</ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.11" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.11">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.11" />
+    <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.0" />
+  </ItemGroup>
+
+</Project>
+
+
+
+<!-- <Project Sdk="Microsoft.NET.Sdk.Web">
+
+  <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>aspnet-NuitInfo.Rubeus-ac32bdfb-5f45-450b-8b44-c4a234d5a2d8</UserSecretsId>
   </PropertyGroup>
 
 <ItemGroup>
@@ -20,6 +58,7 @@
   </PackageReference>
   <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.11" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.11" />
+  <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
   <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.0" />
 </ItemGroup>
-</Project>
+</Project> -->
