--- a/NuitInfo.Rubeus.csproj
+++ b/NuitInfo.Rubeus.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.11" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
     <PackageReference Include="MudBlazor" Version="8.15.0" />
+    <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.0" />
   </ItemGroup>
 
