ajout des implémentations

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,31 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+"Enregistrement": {
+  "DossierEnregistrements": "Enregistrements",
+  "FormatFichier": "enregistrement_{0:yyyyMMdd_HHmmss}.wav",
+  "TauxEchantillonnage": 44100,
+  "NombreCanaux": 2,
+  "BitsParEchantillon": 16,
+  "DureeMaximale": "01:00:00",
+  "SeuilSilenceDb": -40.0,
+  "DureeMinimaleSilence": "00:00:02",
+  "TailleBuffer": 4096,
+  "DelaiRotationAutomatique": "00:15:00",
+  "DureeConservationJours": 30,  
+  "ActiverCompressionAutomatique": false,
+  "ActiverTranscriptionAuto": false,
+  "ActiverSyntheseAuto": false
+},
+
+
+  "Nettoyage": {
+    "IntervalleCycleHeures": 6,
+    "DelaiDemarrageSecondes": 30,
+    "SupprimerMetadonnees": true,
+    "LoggerDetaillee": false
+  },
+
   "AllowedHosts": "*"
 }
